Custom btn and choices ids in form components

--- a/src/filters/filterSubmission.html
+++ b/src/filters/filterSubmission.html
@@ -8,7 +8,7 @@
             referenceType: { value: "str" },
             messageId: { value: "" },
             messageIdType: { value: "str" },
-            saveLocation: { value: "" },
+            saveLocation: { value: "savedSubmission" },
             saveLocationType: { value: "msg"},
             extractValues: { value: true }
         },
