--- a/src/formUpdater.html
+++ b/src/formUpdater.html
@@ -69,5 +69,9 @@
 </script>
 
 <script type="text/html" data-help-name="formUpdater">
-    <p>Update a component value of a saved form.</p>
+    <p>Updates a form component value in a saved form.</p>
+    <h3>Properties</h3>
+    <p><b>Saved Form Location:</b> the location where you saved the form upon declaration, using the <code>Form Setup</code> node.</p>
+    <p><b>Component RefName:</b> the reference name you have given to the form component while declaring it, using the <code>Form Component</code> node. This is the discriminant to identify the right component to update within the saved form.</p>
+    <p><b>Component Value:</b> the new value you want to store in the form component you are updating. Make sure you set appropriate accepted values according to the original component type.</p>
 </script>
