--- a/src/sender.html
+++ b/src/sender.html
@@ -33,7 +33,7 @@
             titleType: {value: "str"},
 
             saveLocation: { value: "savedEntityId" },
-            saveLocationType: { value: "msg" },
+            saveLocationType: { value: "flow" },
 
             saveRequestIdLocation: { value: "savedRequestId" },
             saveRequestIdLocationType: { value: "flow" },
