--- a/src/formSetup.html
+++ b/src/formSetup.html
@@ -317,6 +317,8 @@
 </script>
 
 <script type="text/html" data-template-name="formSetup">
+    <div style="max-width:500px;">Declare and setup a new form to be subsequently enriched with form components, by using <code>Form Component</code> nodes.</div>
+    <br />
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name"/>
