--- a/src/message.html
+++ b/src/message.html
@@ -196,6 +196,8 @@
 </script>
 
 <script type="text/html" data-template-name="message">
+    <div style="max-width:500px;">Declare a new message to be sent with the <code>Sender</code> node.</div>
+    <br />
     <div class="form-row">
         <label for="node-input-name"><i class="fa fa-tag"></i> Name</label>
         <input type="text" id="node-input-name" placeholder="Name"/>
