--- a/src/formComponent.html
+++ b/src/formComponent.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('formComponent', {
+    RED.nodes.registerType('smeFormComponent', {
         category: 'semilimesAPI',
         color: '#E6E0F8',
         defaults: {
@@ -307,7 +307,7 @@
     }
 </script>
 
-<script type="text/html" data-template-name="formComponent">
+<script type="text/html" data-template-name="smeFormComponent">
     <div style="max-width:500px;">Add a new form component to a form that has already been declared using the <code>Form Setup</code> node.</div>
     <br />
     <div class="form-row">
@@ -407,7 +407,7 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="formComponent">
+<script type="text/html" data-help-name="smeFormComponent">
     <p>Adds a form component to an initialized form structure. Make sure you use a <code>Form Setup</code> node to configure the initial structure before adding any of these nodes.</p>
     <h3>Properties</h3>
     <p>
