--- a/src/formUpdater.html
+++ b/src/formUpdater.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('formUpdater', {
+    RED.nodes.registerType('smeFormUpdater', {
         category: 'semilimesAPI',
         color: "#E6E0F8",
         defaults: {
@@ -42,7 +42,7 @@
     });
 </script>
 
-<script type="text/html" data-template-name="formUpdater">
+<script type="text/html" data-template-name="smeFormUpdater">
     <div style="max-width:500px;">Use this node to update a component value of a previously saved form.</div>
     <br />
 
@@ -68,7 +68,7 @@
     
 </script>
 
-<script type="text/html" data-help-name="formUpdater">
+<script type="text/html" data-help-name="smeFormUpdater">
     <p>Updates a form component value in a saved form.</p>
     <h3>Properties</h3>
     <p><b>Saved Form Location:</b> the location where you saved the form upon declaration, using the <code>Form Setup</code> node.</p>
