--- a/src/message.html
+++ b/src/message.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('message', {
+    RED.nodes.registerType('smeMessage', {
         category: 'semilimesAPI',
         color: '#a6bbcf',
         defaults: {
@@ -195,7 +195,7 @@
     }
 </script>
 
-<script type="text/html" data-template-name="message">
+<script type="text/html" data-template-name="smeMessage">
     <div style="max-width:500px;">Declare a new message to be sent with the <code>Sender</code> node.</div>
     <br />
     <div class="form-row">
@@ -282,7 +282,7 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="message">
+<script type="text/html" data-help-name="smeMessage">
     <p>This node creates a message component based on the selected <code>Message</code> property</p>
     <h3>Outputs</h3>
     <dl class="message-properties">
