--- a/src/uploader.html
+++ b/src/uploader.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-    RED.nodes.registerType('uploader', {
+    RED.nodes.registerType('smeUploader', {
         category: 'semilimesAPI',
         color: "#D7D7A0",
         defaults: {
