--- a/src/uploader.html
+++ b/src/uploader.html
@@ -25,7 +25,7 @@
     });
 </script>
 
-<script type="text/html" data-template-name="uploader">
+<script type="text/html" data-template-name="smeUploader">
     <div style="max-width:500px;">This node is to upload files/photos to semilimes and returns an ID of the uploaded file which is used for sending file/photo messages.</div>
     <br />
     <div class="form-row">
@@ -40,7 +40,7 @@
     </div>
 </script>
 
-<script type="text/html" data-help-name="uploader">
+<script type="text/html" data-help-name="smeUploader">
     <p>Uploads a file to semilimes and gets back the uploaded file(s) complete with its FileId assigned by the server.</p>
     <h3>Outputs</h3>
     <dl class="message-properties">
